<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.example.helena.voicedit_android.activity.LoginActivity">
    <TextView
        android:id="@+id/tv_login"
        android:textSize="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_button" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_button" />
    </LinearLayout>

    <TextView
        android:text="此用户还未创建声纹模型"
        android:textColor="#ff0000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/tv_toast"/>

    <TextView
        android:layout_marginTop="16dp"
        android:textColor="@color/colorAccent"
        android:text="@string/tips_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/support_dear"
        android:textColor="@android:color/black" />
</LinearLayout>
